feat: Add countdown

--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
         <!-- Logo de l'associació afegit per sobre del títol -->
         <div class="hero-content">
           <h1>Contacte</h1>
-          <div class="frame">
+          <!-- <div class="frame">
             <h3>Tenim ganes de saber de tu!</h3>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
