--- a/faqs.html
+++ b/faqs.html
@@ -37,9 +37,9 @@
         <!-- Logo de l'associació afegit per sobre del títol -->
           <div class="hero-content">
             <h1>FAQs</h1>
-            <div class="frame">
+            <!-- <div class="frame">
               <h3>Resolem les teves preguntes</h3>
-            </div>
+            </div> -->
         </div>
       </div>
     </section>
