--- a/index.html
+++ b/index.html
@@ -44,13 +44,35 @@
             <h2>SUMO FIGHT COMPETITION</h2>
             <h3>7 MAIG 2025</h3>
           </div>
-          <div class="download-button" style="margin-top: 60px;">
-            <button onclick="window.open('https://forms.gle/HS1dLkhx7CWvooET6', '_blank');">Inscriu-te</button>
-            <p class="small-text">Fins el 25 de febrer</p>
-          </div>
         </div>
       </div>
     </section>
+
+    <section class="countdown-container">
+      <div class="title">Data límit per inscriure't</div>
+      <div class="countdown">
+        <div class="time-segment">
+          <div class="time-value" id="days">00</div>
+          <div class="time-label">Días</div>
+        </div>
+        <div class="time-segment">
+          <div class="time-value" id="hours">00</div>
+          <div class="time-label">Horas</div>
+        </div>
+        <div class="time-segment">
+          <div class="time-value" id="minutes">00</div>
+          <div class="time-label">Minutos</div>
+        </div>
+        <div class="time-segment">
+          <div class="time-value" id="seconds">00</div>
+          <div class="time-label">Segundos</div>
+        </div>
+      </div>
+      <div class="download-button">
+        <button onclick="window.open('https://forms.gle/HS1dLkhx7CWvooET6', '_blank');">Inscriu-te</button>
+      </div>
+    </section>
+
 
     <!-- Resta del contingut de la web -->
     <div class="container-sidebar">
@@ -63,7 +85,7 @@
             aconsegueixi fer fora del ring a la resta d'oponents i proclamar-te vencedor.
             Preparat per portar les teves habilitats a un altre nivell?
             <br>
-            La competició t’espera, i només els millors dominaran el ring!
+            La competició t'espera, i només els millors dominaran el ring!
           </p>
         </div>
 
@@ -209,10 +231,11 @@
             <div class="content">
               <h2>Taller Introducció</h2>
               <p>Benvinguda, presentació de la competició i primera comanda de material per equip.</p>
+              <br>
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
-                <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="separator">| </span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
@@ -225,7 +248,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
@@ -238,33 +261,33 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
           <div class="container right">
             <div class="date">19 Mar</div>
-            <i class="icon fa fa-print"></i>
+            <i class="icon fa fa-solid fa-microchip"></i>
             <div class="content">
               <h2>Taller PCB</h2>
               <p>Disseny de la placa i soldadura dels components.</p>
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
           <div class="container left">
             <div class="date">26 Mar</div>
-            <i class="icon fa fa-3"></i>
+            <i class="icon fa fa-solid fa-cube"></i>
             <div class="content">
               <h2>Taller Disseny 3D</h2>
               <p>Disseny 3D del xassis del robot amb Fusion 360.</p>
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
@@ -277,7 +300,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
@@ -290,7 +313,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
@@ -303,7 +326,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Campus Nord UPC A4001</span>
+                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
               </p>
             </div>
           </div>
@@ -318,40 +341,43 @@
       <section id="normative">
         <div class="header-section">
           <h2>Normativa</h2>
-          <p>Consulta les regles bàsiques i especificacions per competir a l'AESSBot.
-            <br>
+          <p>
+            Consulta la normativa completa per competir a l’AESSBot, on trobaràs totes les regles i especificacions que
+            hauran de complir els participants.
           </p>
         </div>
         <div class="download-button">
           <button id="download-btn">Descarrega PDF</button>
           <script>
             document.getElementById('download-btn').addEventListener('click', () => {
-              window.open('documentos/normativa_v1.pdf', '_blank');
+              window.open('documentos/normativa_v2.pdf', '_blank');
             });
           </script>
         </div>
       </section>
 
       <!-- Inscripcions Section -->
-      <section id="register">
-        <div class="header-section">
-          <h2>Inscripcions</h2>
-          <p>
-            Inscripcions obertes fins el dimarts 25 de febrer.
-            <br>
-            La inscripció és gratuïta i es pot realitzar de forma individual o en equips (fins a 4 persones).
-          </p>
-        </div>
-        <div class="download-button">
-          <button onclick="window.open('https://forms.gle/HS1dLkhx7CWvooET6', '_blank');">Inscriu-te</button>
-        </div>
-      </section>
+      <!-- <section id="register">
+  <div class="header-section">
+    <h2>Inscripcions</h2>
+    <p>
+      Inscripcions obertes fins el 25 de febrer. Gratuïtes i per a inscripcions individuals o en equips (fins a 4 persones).
+    </p>
+  </div>
+  <div class="download-button">
+    <button onclick="window.open('https://forms.gle/HS1dLkhx7CWvooET6', '_blank');">Inscriu-te</button>
+  </div>
+</section> -->
+
 
       <!-- Col·laboracions Section -->
       <section id="partners" class="key-statistics">
         <div class="header-section">
+          <h2>Col·laboradors</h2>
           <p>
-            Amb la col·laboració de:
+            La nostra competició és possible gràcies al suport i la col·laboració de diverses entitats que aporten
+            recursos, experiència i compromís. Si vols col·laborar amb nosaltres o aportar el teu suport, <a
+              href="contact.html">contacta amb nosaltres</a>.
           </p>
         </div>
         <div class="highlight-cards">
@@ -366,6 +392,9 @@
           </div>
         </div>
       </section>
+
+
+
     </div>
   </main>
 
@@ -439,10 +468,11 @@
 
   <!-- Scripts -->
   <script src="js/carousel.js" defer></script>
-  <script src="js/calendar.js" defer></script>
+  <!-- <script src="js/calendar.js" defer></script> -->
   <script src="js/faqs.js" defer></script>
   <script src="js/schedule.js" defer></script>
   <script src="js/timeline.js"></script>
+  <script src="js/countdown.js"></script>
 
 </body>
 
