fix: Politica privacitat

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,12 @@
 
           <div class="form-group-terms checkbox">
             <input type="checkbox" id="accept" name="accept" required>
-            <label for="accept">Accepto <a href="#">la política de privacitat</a></label>
+            <label for="accept">
+              Accepto <a href="documentos/Política_Privacitat.pdf" target="_blank" 
+                        rel="noopener noreferrer">
+                la política de privacitat
+              </a>
+            </label>
           </div>
 
           <div class="download-button">
@@ -134,8 +139,10 @@
           <h3 class="footer-heading">Quick Links</h3>
           <nav>
             <ul>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms of Service</a></li>
+              <a href="documentos/Política_Privacitat.pdf" target="_blank" rel="noopener noreferrer">
+                Privacy Policy
+              </a>
+              </li>
             </ul>
           </nav>
         </div>
