--- a/faqs.html
+++ b/faqs.html
@@ -65,7 +65,7 @@
               <p>L'AESSBot és una competició de robòtica, centrada en el minisumo, organitzada per AESS Estudiants. En
                 aquesta edició 2025, els equips han de dissenyar i construir robots autònoms que competeixin en un
                 ring
-                segons un reglament específic, culminant amb una final el 07 de maig.</p>
+                segons un reglament específic, culminant amb una final el 7 de maig.</p>
             </div>
           </details>
           <details>
@@ -135,10 +135,9 @@
           <details>
             <summary>He de portar alguna cosa als tallers?</summary>
             <div class="answer">
-              <p>Durant el primer taller es guiarà als equips per elaborar un llistat de material, de manera que no
-                cal
-                portar res en concret. En els tallers posteriors, els equips gestionaran el material segons les
-                indicacions rebudes.</p>
+              <p>Es necessari que els equips portin ordinador. També es recomana portar paper i llapis.
+          
+              </p>
             </div>
           </details>
           <details>
@@ -154,13 +153,7 @@
             <div class="answer">
               <p>Durant el primer taller, els equips elaboraran un llistat de material necessari amb l'ajuda dels
                 organitzadors. A partir d'aquest llistat, AESS coordinarà amb la UPC perquè el material estigui
-                disponible
-                per als tallers següents. Les factures corresponents s'enviaran a <a
-                  href="mailto:aess.estudiants@upc.edu">aess.estudiants@upc.edu</a> amb el concepte
-                <strong>AESSBOT2025-Factures-[NOM_EQUIP]</strong> i només es validaran per als equips que competeixin
-                a
-                la
-                final, amb el pagament realitzat al final de la competició.
+                disponible per als tallers següents.
               </p>
             </div>
           </details>
@@ -185,7 +178,7 @@
             <div class="answer">
               <p>Sí, tots els robots han de complir amb el reglament oficial de l'AESSBot. Això implica respectar
                 especificacions generals com ara dimensions, pes màxim, cost i altres restriccions. Pots consultar la
-                normativa completa <a href="documentos/normativa.pdf" target="_blank">aquí</a>.</p>
+                normativa completa <a href="documentos/normativa_v2.pdf" target="_blank">aquí</a>.</p>
             </div>
           </details>
         </div>
@@ -280,8 +273,12 @@
           <h3 class="footer-heading">Quick Links</h3>
           <nav>
             <ul>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms of Service</a></li>
+              <li>
+                <a href="documentos/Política_Privacitat.pdf" target="_blank" 
+           rel="noopener noreferrer">
+          Privacy Policy
+        </a>
+              </li>
             </ul>
           </nav>
         </div>
