--- a/index.html
+++ b/index.html
@@ -231,11 +231,10 @@
             <div class="content">
               <h2>Taller Introducció</h2>
               <p>Benvinguda, presentació de la competició i primera comanda de material per equip.</p>
-              <br>
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">| </span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -248,7 +247,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -261,7 +260,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -274,7 +273,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -287,7 +286,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -300,7 +299,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -313,7 +312,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -326,7 +325,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
-                <span class="location"><i class="fa fa-map-marker"></i> Per definir</span>
+                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -416,8 +415,9 @@
           <h3 class="footer-heading">Quick Links</h3>
           <nav>
             <ul>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms of Service</a></li>
+              <li><a href="documentos/Política_Privacitat.pdf" target="_blank" rel="noopener noreferrer">
+                  Privacy Policy
+                </a></li>
             </ul>
           </nav>
         </div>
