fix: Fix name and styles

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
       <div class="countdown">
         <div class="time-segment">
           <div class="time-value" id="days">00</div>
-          <div class="time-label">Días</div>
+          <div class="time-label">Dies</div>
         </div>
         <div class="time-segment">
           <div class="time-value" id="hours">00</div>
-          <div class="time-label">Horas</div>
+          <div class="time-label">Hores</div>
         </div>
         <div class="time-segment">
           <div class="time-value" id="minutes">00</div>
-          <div class="time-label">Minutos</div>
+          <div class="time-label">Minuts</div>
         </div>
         <div class="time-segment">
           <div class="time-value" id="seconds">00</div>
-          <div class="time-label">Segundos</div>
+          <div class="time-label">Segons</div>
         </div>
       </div>
       <div class="download-button">
