feat: Places limitades

--- a/faqs.html
+++ b/faqs.html
@@ -191,9 +191,8 @@
           <details>
             <summary>Es pot convalidar crèdits?</summary>
             <div class="answer">
-              <p>La convalidació d'1 crèdit ECTS és automàtica per als estudiants de l'ETSETB. Per als estudiants
-                d'altres
-                escoles, la convalidació es sol·licitarà i dependrà de la decisió de cada escola.</p>
+              <p>La convalidació d'1 crèdit ECTS és automàtica per als estudiants de grau de l'ETSETB. Per als estudiants
+                de grau d'altres escoles, la convalidació es sol·licitarà i dependrà de la decisió de cada escola.</p>
             </div>
           </details>
         </div>
