--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900&display=swap"
     rel="stylesheet">
-
   <title>AESSBot 2025</title>
   <meta name="description"
     content="Web de la competició AESSBot 2025 - Organitzada per AESS Estudiants. Inscripcions obertes per estudiants de la UPC.">
@@ -47,7 +46,6 @@
         </div>
       </div>
     </section>
-
     <section class="countdown-container">
       <div class="title">Data límit per inscriure't</div>
       <div class="countdown">
@@ -70,7 +68,11 @@
       </div>
       <div class="download-button">
         <button onclick="window.open('https://forms.gle/HS1dLkhx7CWvooET6', '_blank');">Inscriu-te</button>
+        <p style="margin: 5px 0; font-size: 0.7em;">
+          Afanya't, les places són limitades!
+        </p>
       </div>
+
     </section>
 
 
@@ -84,7 +86,6 @@
             Entra al ring i demostra qui és el rei del Minisumo! El teu repte? Dissenyar el robot definitiu que
             aconsegueixi fer fora del ring a la resta d'oponents i proclamar-te vencedor.
             Preparat per portar les teves habilitats a un altre nivell?
-            <br>
             La competició t'espera, i només els millors dominaran el ring!
           </p>
         </div>
