feat: Places exhaurides

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </section>
     <section class="countdown-container">
-      <div class="title">Data límit per inscriure't</div>
+      <div class="title">Apunta't a la llista d'espera</div>
       <div class="countdown">
         <div class="time-segment">
           <div class="time-value" id="days">00</div>
@@ -69,7 +69,7 @@
       <div class="download-button">
         <button onclick="window.open('https://forms.gle/HS1dLkhx7CWvooET6', '_blank');">Inscriu-te</button>
         <p style="margin: 5px 0; font-size: 0.7em;">
-          Afanya't, les places són limitades!
+          Actualment no queden places. Estem treballant per ampliar-ne.
         </p>
       </div>
 
