feat: Close form

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         </div>
       </div>
     </section>
+  
     <section class="countdown-container">
-      <div class="title">Apunta't a la llista d'espera</div>
+      <div class="title">Inici competició</div>
       <div class="countdown">
         <div class="time-segment">
           <div class="time-value" id="days">00</div>
@@ -66,14 +67,17 @@
           <div class="time-label">Segons</div>
         </div>
       </div>
-      <div class="download-button">
+      <!-- <div class="download-button">
         <button onclick="window.open('https://forms.gle/HS1dLkhx7CWvooET6', '_blank');">Inscriu-te</button>
         <p style="margin: 5px 0; font-size: 0.7em;">
           Actualment no queden places. Estem treballant per ampliar-ne.
         </p>
+      </div> -->
+      <div>
+        <p style="margin: 5px 0; font-size: 0.7em;">
+          Ja no hi ha places disponibles. En breu rebreu un correu electrònic amb la confirmació de la vostra inscripció.        </p>
       </div>
-
-    </section>
+    </section> 
 
 
     <!-- Resta del contingut de la web -->
