feat: Define taller 1 location

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
     </section>
   
-    <section class="countdown-container">
-      <div class="title">Inici competició</div>
+    <!-- <section class="countdown-container">
+      <div class="title">Final</div>
       <div class="countdown">
         <div class="time-segment">
           <div class="time-value" id="days">00</div>
@@ -73,11 +73,11 @@
           Actualment no queden places. Estem treballant per ampliar-ne.
         </p>
       </div> -->
-      <div>
+      <!-- <div>
         <p style="margin: 5px 0; font-size: 0.7em;">
           Ja no hi ha places disponibles. En breu rebreu un correu electrònic amb la confirmació de la vostra inscripció.        </p>
-      </div>
-    </section> 
+      </div> -->
+    </section>  -->
 
 
     <!-- Resta del contingut de la web -->
@@ -239,7 +239,7 @@
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">| </span>
-                <span class="location"><i class="fa fa-map-marker"></i> UPC Campus Nord</span>
+                <span class="location"><i class="fa fa-map-marker"></i> C4S102b, UPC Campus Nord</span>
               </p>
             </div>
           </div>
@@ -287,7 +287,7 @@
             <i class="icon fa fa-solid fa-cube"></i>
             <div class="content">
               <h2>Taller Disseny 3D</h2>
-              <p>Disseny 3D del xassis del robot amb Fusion 360.</p>
+              <p>Disseny 3D del xassis del robot.</p>
               <p class="info">
                 <span class="time"><i class="fa fa-clock"></i> 11:00 - 13:00</span>
                 <span class="separator">|</span>
@@ -354,7 +354,7 @@
           <button id="download-btn">Descarrega PDF</button>
           <script>
             document.getElementById('download-btn').addEventListener('click', () => {
-              window.open('documentos/normativa_v2.pdf', '_blank');
+              window.open('documentos/normativa_v3.pdf', '_blank');
             });
           </script>
         </div>
@@ -386,13 +386,17 @@
         </div>
         <div class="highlight-cards">
           <div class="highlight-card">
-            <img src="images/LogoAESS.svg" alt="Logo AESS Estudiants">
+            <img src="images/LogoAESS.svg" alt="Logo AESS Estudiants" style="width: 220px;">
           </div>
+          
           <div class="highlight-card">
             <img src="images/logo-telecos.svg" alt="Logo ETSETB">
           </div>
           <div class="highlight-card">
             <img src="images/logo-upc.svg" alt="Logo UPC">
+          </div>
+          <div class="highlight-card">
+            <img src="images/mps-logo.svg" alt="Logo MPS" style="width: 200px;">
           </div>
         </div>
       </section>
